--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,13 @@
 {
-  "name": "angular.dev",
-  "version": "0.0.0",
-  "authors": [
-    "Your Name <you@example.com>"
+	"name": "angular.dev",
+	"version": "0.0.0",
+	"authors": [
+    "Kenneth Massada  "
   ],
-  "license": "MIT",
-  "ignore": [
+	"description": "A starter project for AngularJS",
+	"repository": "https://github.com/kmassada/angular-app.git",
+	"license": "MIT",
+	"ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
@@ -13,11 +15,11 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "angular": "~1.4.5",
-    "angular-route": "~1.4.5",
-    "angular-loader": "~1.4.5",
-    "angular-mocks": "~1.4.5",
-    "html5-boilerplate": "~5.2.0"
-  }
+	"dependencies": {
+		"angular": "~1.4.5",
+		"angular-route": "~1.4.5",
+		"angular-loader": "~1.4.5",
+		"angular-mocks": "~1.4.5",
+		"html5-boilerplate": "~5.2.0"
+	}
 }
